# OTVision

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .yamllint.yaml  BOXMOT_INTEGRATION.md  Dockerfile  Dockerfile.detect  Dockerfile.track  Makefile  OTVision.bat  OTVision.drawio  README.md  boxmot_config.example.yaml  build.py  clean-up-repository.sh  config.yml  convert.py  detect.py  export_models.py  generate_video.py  gui.py  hascuda.py  install.cmd  install.sh  install_cuda.cmd  install_cuda.sh  install_dev.cmd  install_dev.sh  install_win-py38.bat  install_win-py39.bat  install_windows.bat  pre_annotate.py  pyproject.toml  reference_points_picker.py  requirements-detect.txt  requirements-dev.txt  requirements-track.txt  requirements.txt  (+17 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: new-function.md
.github/workflows/: build-nightly.yml  build-release.yml  cicd.yml  create-distribution.yml  issue-automation.yml  issue-unlabel-automation.yml  linter.yml  pr-automation.yml  release-pypi.yml  release-testpypi.yml  test-automation.yml  test.yml
OTVision/: OTVision.bat  __create_venv__.bat  __init__.py  config.py  convert.py  dataformat.py  default.conf  default.otconf  detect.py  gui.py  install.bat  install.sh  install_win-py38.bat  install_win-py39.bat  pre_annotation.py  run_view.py  track.py  transform.py  transform_to_world.py  user.conf  user.otconf  user_settings.ini  version.py  video_player.py
OTVision/abstraction/: defaults.py  observer.py  pipes_and_filter.py
OTVision/application/: buffer.py  config.py  config_parser.py  configure_logger.py  frame_count_provider.py  get_config.py  get_current_config.py  otvision_save_path_provider.py  update_current_config.py
OTVision/convert/: convert.py
OTVision/detect/: builder.py  cli.py  detect.py  detected_frame_buffer.py  detected_frame_producer.py  detected_frame_producer_factory.py  file_based_detect_builder.py  otdet.py  otdet_file_writer.py  pyav_frame_count_provider.py  rtsp_based_detect_builder.py  rtsp_input_source.py  timestamper.py  video_input_source.py  yolo.py
OTVision/domain/: cli.py  current_config.py  detect.py  detect_producer_consumer.py  detection.py  frame.py  input_source_detect.py  object_detection.py  serialization.py  time.py  video_writer.py
OTVision/gui/: __init__.py  __main__.py  browse_folders_and_files.py  convert.py  convert_view.py  detect.py  detect_view.py  folders_files.py  sg_otc_theme.py  track.py  track_view.py  transform.py  transform_old_view.py  transform_to_world.py  transform_view.py  undistort_view.py  update_window.py  video_player.py  video_player_class.py  video_player_image.py  video_player_opencv.py  video_player_opencv_count.py  video_player_test_1.py
OTVision/helpers/: config.py  date.py  files.py  formats.py  input_types.py  log.py  machine.py  video.py
OTVision/plugin/: ffmpeg_video_writer.py  generate_video.py  yaml_serialization.py
OTVision/track/: __main__.py  boxmot_utils.py  builder.py  chunk_parser_plugins.py  cli.py  data.py  file_tracking.py  filebased_tracking.py  frame_chunk.py  frame_group_parser_plugins.py  id_generator.py  iou.py  iou_tracker.py  iou_tracker_qp.py  iou_util.py  new_track.py  preprocess.py  stream_ottrk_file_writer.py  track.py  track_exporter.py  tracker_plugin_iou.py  tracking_interfaces.py  video_frame_provider.py
OTVision/trajectories/: example_traj.csv
OTVision/transform/: get_homography.py  get_refpts.py  get_refpts_utm.py  helpers.py  reference_points_picker.py  transform.py
OTVision/transform_to_world/: get_refpts.py  helpers.py  pysimplegui_test.ipynb  transform_to_world.py
OTVision/transformtoworld/: transform_to_world.py
OTVision/undistortlens/: data.txt  undistort.py
OTVision/view/: view.py  view_convert.py  view_detect.py  view_helpers.py  view_main.py  view_track.py  view_transform.py  view_transform_popup.py
scripts/: benchmark_boxmot.py  install_boxmot.cmd  install_boxmot.sh
tests/: api_test.py  api_testing.py  conftest.py  pre_annotation_test.py  test_config.py  testing_api.py
tests/abstraction/: test_defaults.py  test_observer.py
tests/application/: test_buffer.py  test_config_parser.py  test_get_config.py  test_otvision_save_path_provider.py
tests/cli/: custom_cli_test_config.yaml  test_convert_cli.py  test_detect_cli.py  test_track_cli.py
tests/convert/: test_convert.py
tests/data/: Testmessung_Radeberg_Erfassungsbereich_refptsPixel.npy  Testmessung_Radeberg_Erfassungsbereich_refptsPixel.txt  Testmessung_Radeberg_Erfassungsbereich_refptsWorld.npy  Testmessung_Radeberg_Erfassungsbereich_refptsWorld.txt  Testvideo.otrefpts  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.gpkg  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.h264  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.otdet  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.otrfpts  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.ottrk  Testvideo_Cars-Cyclist_FR20_2020-01-01_00-00-00.ottrk.bz2  Testvideo_Cars-Truck_FR20_2020-01-01_00-00-00.gpkg  Testvideo_Cars-Truck_FR20_2020-01-01_00-00-00.otdet  Testvideo_Cars-Truck_FR20_2020-01-01_00-00-00.ottrk  Testvideo_Cars-Truck_FR20_2020-01-01_00-00-00.ottrk.bz2  Testvideo_FR20_Cars-Cyclist.GeoJSON  Testvideo_FR20_Cars-Cyclist.gpkg  Testvideo_FR20_Cars-Cyclist.otdet  Testvideo_FR20_Cars-Cyclist.otgpkg  Testvideo_FR20_Cars-Cyclist.otrfpts  Testvideo_FR20_Cars-Cyclist.ottrk  Testvideo_FR20_Cars-Cyclist_utm.gpkg  Testvideo_FR20_Cars-Truck.GeoJSON  Testvideo_FR20_Cars-Truck.gpkg  Testvideo_FR20_Cars-Truck.otdet  Testvideo_FR20_Cars-Truck.otgpkg  Testvideo_FR20_Cars-Truck.ottrk  Testvideo_FR20_refpts.csv  Testvideo_FR20_refpts_utm.gpkg  raspberrypi_FR20_2020-02-20_11-30-00_mp4_DFS_otcTraj.pkl  raspberrypi_FR20_2020-02-20_11-30-00_mp4_DFS_otcTrajInfo.pkl  raspberrypi_FR20_2020-02-20_11-30-00_mp4_DFS_otcTrajWorld.pkl  raspberrypi_FR20_2020-02-20_11-30-00_mp4_DFS_otcTrajWorld_decComma.csv  (+55 more)
tests/detect/: detect_test.py  test_odet.py  (+9 more)
view/: view_convert.py  view_detect.py  view_helpers.py  view_main.py  view_track.py
(+137 files in other folders)
