[metadata]
name=OTVision

[options]
package_dir=
    =OTVision
packages=find:

[options.packages.find]
where=OTVision
exclude=tests*

[flake8]
max-line-length=88
docstring-convention=google
extend-ignore=E203

[isort]
profile=black

[mypy]
ignore_missing_imports = True
ignore_missing_imports_per_module = True
disallow_untyped_defs = True

[mypy-OTVision.view.*]
disallow_untyped_defs = False
